outputs/tsp_constructive-constructive/2025-12-21_23-27-37/evaluations/problem_eval-591231882434264384_stdout.txt
Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to the lookahead cost (candidate to destination) over the immediate travel cost (current to candidate) to more strongly favor nodes closer to the tour's origin.}
                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master/problems/tsp_constructive/eval.py", line 13, in <module>
    from gpt import select_next_node
  File "C:\Users\pc\Downloads\EvolutionaryComputation\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance to the lookahead cost (candidate to destination) over the immediate travel cost (current to candidate) to more strongly favor nodes closer to the tour's origin.}
                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
